Apply OpenRewrite recipes for Java 21 upgrade